stop horizontal scrollig issue

--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,18 @@
   max-width: 100% ;
 
 }
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
 
-
+* {
+  box-sizing: inherit;
+}
 
 .font-roboto {
   font-family: 'Roboto', sans-serif;
